<resources>
    <string name="app_name">Time</string>
    <string name="user_name">用户名:</string>
    <string name="user_hint">输入用户名</string>
    <string name="user_code">密码:</string>
    <string name="code_hint">请输入密码（大于六位）</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="new_register">注册新用户</string>
    <string name="code_confirm">确认密码</string>
    <string name="code_Confirm">请再次确认密码</string>
    <string name="btn_add">新增计划</string>
    <string name="btn_reset">确定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findPasswprd">找回密码</string>
    <string name="question">问题</string>
    <string name="question1">给自己出一个问题用于找回密码</string>
    <string name="answer">答案</string>
    <string name="input_username">输入用户名</string>
    <string name="next">下一步</string>
    <string name="return1">返回登陆界面</string>
    <string name="remenberPassword">请记住密码</string>
    <string name="Detail">计划细节</string>
    <string name="resthing">待完成任务:</string>
    <string name="tv_info">用户信息</string>
    <string name="btn_more">更多</string>
    <string name="logout">退出登录</string>
    <string name="btn_changePassword">修改密码</string>
    <string name="tv_changePassword">修改密码</string>
    <string name="usedPassword">原密码</string>
    <string name="newPassword">新密码</string>
    <string name="confirmPassword">确认新密码</string>
    <string name="input_time">输入时间</string>
    <string name="input_thing">输入事件</string>
    <string name="time">时间</string>
    <string name="thing">计划</string>
</resources>