<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.FindPasswordActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findPasswprd"
        android:textSize="20sp"/>

    <TextView
        android:layout_marginTop="50dp"
        android:text="@string/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:singleLine="true"
        android:id="@+id/et_find"
        android:inputType="text"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:text="@string/next"
        android:layout_gravity="center"
        android:onClick="btn_find"
        android:layout_marginTop="60sp"/>

</LinearLayout>