<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DetailActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:text="@string/Detail" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/time"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50sp"
        android:singleLine="true"
        android:id="@+id/et_time"
        android:importantForAutofill="no"
        android:inputType="text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/thing"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:id="@+id/et_thing"
        android:inputType="text"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Detail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:id="@+id/et_detail"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_detail"
        android:text="@string/btn_reset"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"/>

</LinearLayout>